--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.2.1
   path_provider: ^2.1.3
   dev_icons: ^1.0.0
+  flutter_cache_manager: ^3.3.2
 
 dev_dependencies:
   flutter_test:
