--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path_provider: ^2.1.3
   dev_icons: ^1.0.0
   flutter_cache_manager: ^3.3.2
+  flutter_screenutil: ^5.9.1
 
 dev_dependencies:
   flutter_test:
@@ -100,6 +101,10 @@ flutter:
   assets:
     - assets/Ela.jpg
     - assets/Coursera WHAJ3WB5FKZB_page-0001.jpg
+    - assets/sdn.jpg
+    - assets/smpn.jpg
+    - assets/sman.jpg
+    - assets/atma.jpg
     - assets/bg.jpg
     - assets/bang dream.gif
   fonts:
