--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   dev_icons: ^1.0.0
   flutter_cache_manager: ^3.3.2
   flutter_screenutil: ^5.9.1
-  
+  flutter_markdown: ^0.7.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
