--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   flutter_cache_manager: ^3.3.2
   flutter_screenutil: ^5.9.1
   flutter_markdown: ^0.7.1
+  geolocator: ^12.0.0    # browser location (web supported)
+  intl: ^0.19.0          # date formatting if needed
 dev_dependencies:
   flutter_test:
     sdk: flutter
