--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   flutter_html: ^3.0.0-beta
   universal_html: ^2.2.4
   font_awesome_flutter: ^10.7.0
-  google_fonts: ^6.2.1
+  google_fonts: 6.3.0
   url_launcher: ^6.2.6
   webview_flutter: ^2.0.4
   cached_network_image: ^3.3.1
